// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitConfigUserName snapshot, loading 1`] = `
<div
  className="pf-c-form__group"
>
  <div
    className="pf-c-form__group-label"
  >
    <label
      className="pf-c-form__label"
      htmlFor="gitconfig-user-name"
    >
      <span
        className="pf-c-form__label-text"
      >
        name
      </span>
      <span
        aria-hidden="true"
        className="pf-c-form__label-required"
      >
         
        *
      </span>
    </label>
     
  </div>
  <div
    className="pf-c-form__group-control"
  >
    <div>
      <input
        aria-invalid={false}
        aria-label={null}
        className="pf-c-form-control"
        data-ouia-component-id="OUIA-Generated-TextInputBase-2"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe={true}
        disabled={true}
        id="gitconfig-user-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value="user one"
      />
      <span
        data-testid="validated"
      >
        default
      </span>
      <button
        aria-disabled={false}
        aria-label={null}
        className="pf-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-2"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        data-testid="button-remove"
        disabled={false}
        role={null}
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`GitConfigUserName snapshot, not loading 1`] = `
<div
  className="pf-c-form__group"
>
  <div
    className="pf-c-form__group-label"
  >
    <label
      className="pf-c-form__label"
      htmlFor="gitconfig-user-name"
    >
      <span
        className="pf-c-form__label-text"
      >
        name
      </span>
      <span
        aria-hidden="true"
        className="pf-c-form__label-required"
      >
         
        *
      </span>
    </label>
     
  </div>
  <div
    className="pf-c-form__group-control"
  >
    <div>
      <input
        aria-invalid={false}
        aria-label={null}
        className="pf-c-form-control"
        data-ouia-component-id="OUIA-Generated-TextInputBase-1"
        data-ouia-component-type="PF4/TextInput"
        data-ouia-safe={true}
        disabled={false}
        id="gitconfig-user-name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value="user one"
      />
      <span
        data-testid="validated"
      >
        default
      </span>
      <button
        aria-disabled={false}
        aria-label={null}
        className="pf-c-button pf-m-primary"
        data-ouia-component-id="OUIA-Generated-Button-primary-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        data-testid="button-remove"
        disabled={false}
        role={null}
        type="button"
      />
    </div>
  </div>
</div>
`;
